# MediCore

./: CMakeLists.txt  README.md  main.cpp
data/: admin.txt  appointments.txt  bills.txt  doctors.txt  patients.txt  security_log.txt
include/: Admin.h  Appointment.h  Bill.h  Doctor.h  Exceptions.h  FileHandler.h  GUI.h  Menus.h  Patient.h  Person.h  Prescription.h  Storage.h  Validator.h
src/: Admin.cpp  Appointment.cpp  Bill.cpp  Doctor.cpp  FileHandler.cpp  GUI.cpp  Menus.cpp  Patient.cpp  Person.cpp  Prescription.cpp  Validator.cpp
